Fix sidebar on mobile

--- a/docs/theme.css
+++ b/docs/theme.css
@@ -560,7 +560,6 @@ section.cover .cover-main {
     flex: 1;
     margin: -20px 16px 0;
     text-align: center;
-    z-index: 1
 }
 
 section.cover a {
